ajuste da seção quem somos

--- a/corebiz-store/store/blocks/pages/quem-somos.jsonc
+++ b/corebiz-store/store/blocks/pages/quem-somos.jsonc
@@ -1,143 +1,10 @@
 {
     "store.custom#quem-somos": {
-        "blocks": ["flex-layout.row#valores"]
-    },
-     
-    "flex-layout.row#title-container":{
-        "props": {
-            "blockClass": "section-black"
-        },
-       "children":[
-           "flex-layout.col#titles"
-       ]
-    },
-    "flex-layout.col#titles":{
-       "children": [
-           "rich-text#h2", "rich-text#h3"
-       ],
-       "props":{
-        "horizontalAlign": "center",
-            "verticalAlign": "center",
-            "preventHorizontalStretch": true,
-            "preventVerticalStretch": true
-        }
-    },
-    "rich-text#h2": {
-        "props": {  
-           "text": "# Who we are?"
-           
-        }
-    },
-    "rich-text#h3": {
-        "props": {
-           "text": "## From Santa Monica to Corebiz"
-        }
-    }, 
-    "flex-layout.row#valores": {
-        "props": {
-            "blockClass": "section-black"
-        },
-        "children": [
-            "flex-layout.col#valores1",
-            "flex-layout.col#valores2",
-            "flex-layout.col#valores3",
-            "flex-layout.col#valores4"
-        ]
-    },
-    "flex-layout.col#valores1": {
-        "children": [
-            "image#valores1",
-            "rich-text#1"    
-        ],
-        "props":{
-            "horizontalAlign": "center",
-                "verticalAlign": "center",
-                "preventHorizontalStretch": true,
-                "preventVerticalStretch": true
-        }
-    },
-    "image#valores1": {
-        "props": {
-            "src": "assets/illustrations/illustration-one.png"
-        }
-    },
-    "rich-text#1": {
-        "props": {
-            "text": "COURAGE",
-            "textPosition": "center"
-        }
-    },
-    "flex-layout.col#valores2": {
-        "children": [
-            "image#valores2",
-            "rich-text#2"
-        ],
-        "props":{
-            "horizontalAlign": "center",
-                "verticalAlign": "center",
-                "preventHorizontalStretch": true,
-                "preventVerticalStretch": true
-        }
-    },
-    "image#valores2": {
-        "props": {
-            "src": "assets/illustrations/illustration-two.png",
-            "maxWidth": "100%"
-        }
-    },
-    "rich-text#2": {
-        "props": {
-            "text": "DETERMINATION"
-        }
-    },
-    "flex-layout.col#valores3": {
-        "children": [
-            "image#valores3",
-            "rich-text#3"
-        ],
-        "props":{
-            "horizontalAlign": "center",
-                "verticalAlign": "center",
-                "preventHorizontalStretch": true,
-                "preventVerticalStretch": true
-        }
-    },
-    "image#valores3": {
-        "props": {
-            "src": "assets/illustrations/illustration-three.png",
-            "maxWidth": "100%"
-        }
-    },
-    "rich-text#3": {
-        "props": {
-            "text": "COLLABORATION AND AGILITY"
-        }
-    },
-    "flex-layout.col#valores4": {
-        "children": [
-            "image#valores4",
-            "rich-text#4"
-        ],
-        "props":{
-            "horizontalAlign": "center",
-                "verticalAlign": "center",
-                "preventHorizontalStretch": true,
-                "preventVerticalStretch": true
-        }
-    },
-    "image#valores4": {
-        "props": {
-            "src": "assets/illustrations/illustration-four.png",
-            "maxWidth": "100%"
-        }
-    },
-    "rich-text#4": {
-        "props": {
-            "text": "INNOVATION"      
-        }
+        "blocks": []
     }
-}
-    //end
+    }
+     
+    
     
   
 
