[feature/footerNew2] Implementation newsletter in footer

--- a/corebiz-store/store/blocks/footer/footer.jsonc
+++ b/corebiz-store/store/blocks/footer/footer.jsonc
@@ -37,7 +37,6 @@
 			"flex-layout.row#newsMedia",
 			"flex-layout.row#siteMap",
 			"flex-layout.row#paymentCertificates"
-			// "rich-text"
 		]
 	},
 	// Bloco NewsMedia
@@ -55,7 +54,7 @@
 			"width": "84%"
 		},
 		"children": [
-			"rich-text"
+			"cadastro-newsletter"
 		]
 	},
 	"flex-layout.col#media": {
