--- a/corebiz-store/store/blocks/header/header.jsonc
+++ b/corebiz-store/store/blocks/header/header.jsonc
@@ -122,6 +122,7 @@
   },
   "login": {
     "props": {
+      "blockClass": "exemploKa",
       "showIconProfile": true,
       "hideIconLabel": true
     }
