--- a/app-cadastro/react/tsconfig.json
+++ b/app-cadastro/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@vtex/tsconfig",
   "compilerOptions": {
+    "lib": ["DOM"],
     "noEmitOnError": false,
     "typeRoots": [
       "node_modules/@types"
