orderPlace Adjustments Styles

--- a/corebiz-store/store/blocks/default.jsonc
+++ b/corebiz-store/store/blocks/default.jsonc
@@ -1,5 +1,8 @@
 {
   "store.orderplaced": {
+    "props": {
+      "blockClass": "opContainer"
+    },
     "blocks": [
       "order-placed",
       "change-lead"
