[feature/footerNew] Fixed Certificado text position

--- a/corebiz-store/store/blocks/footer/footer.jsonc
+++ b/corebiz-store/store/blocks/footer/footer.jsonc
@@ -414,6 +414,7 @@
 	},
 	"rich-text#certificatesTitle": {
 		"props": {
+			"blockClass": "textCertificados",
 			"text": "##### CERTIFICADOS"
 		}
 	},
