--- a/corebiz-store/store/blocks/header/header.jsonc
+++ b/corebiz-store/store/blocks/header/header.jsonc
@@ -123,7 +123,8 @@
   "login": {
     "props": {
       "showIconProfile": true,
-      "hideIconLabel": true
+      "hideIconLabel": true,
+      "blockClass":"loginLayout"
     }
   },
   
