--- a/corebiz-store/manifest.json
+++ b/corebiz-store/manifest.json
@@ -51,7 +51,7 @@
     "vtex.modal-layout": "0.x",
     "vtex.store-video": "1.x",
     "vtex.store-link": "0.x",
-    "vtex.condition-layout": "1.x",
+    "vtex.condition-layout": "2.3",
     "vtex.store-icons": "0.x",
     "hiringcoders202112.app-cadastro": "0.x",
     "hiringcoders202112.corebiz-admin": "0.x"
