--- a/corebiz-admin/manifest.json
+++ b/corebiz-admin/manifest.json
@@ -17,5 +17,9 @@
     "messages": "1.x",
     "docs": "0.x"
   },
+  "billingOptions": {
+    "type": "free",
+    "availableCountries" : ["*"]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
