--- a/corebiz-register/manifest.json
+++ b/corebiz-register/manifest.json
@@ -14,5 +14,9 @@
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x"
   },
+  "billingOptions": {
+    "type": "free",
+    "availableCountries" : ["*"]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
