--- a/corebiz-admin/manifest.json
+++ b/corebiz-admin/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "corebiz-admin",
   "vendor": "hiringcoders202112",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "title": "Leads Admin App",
   "description": "",
   "mustUpdateAt": "2022-08-28",
@@ -19,7 +19,9 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries" : ["*"]
+    "availableCountries": [
+      "*"
+    ]
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
